# Python-OpenGL-Platformer

./: .gitattributes  .gitignore  pyproject.toml
Source/: camera.py  loader.py  main.py  mesh.py  program.py  scene.py  settings.py  shader.py  texture.py  texture_array.py
Source/Buffers/: EBO.py  SSBO.py  UBO.py  VAO.py  VBO.py
